# pixiv_downloader

./: .gitignore  .gitmodules  Cargo.toml  Dockerfile  README.md  build.rs  docker-compose.yml  log-cfg.yml  rustfmt.toml
.devcontainer/all/: Dockerfile  devcontainer.json
.github/: dependabot.yml
.github/workflows/: CI.yml  docker.yml  github-pages.yaml
Language/: pixiv_downloader.pot  pixiv_downloader.zh_CN.po
avdict/: CMakeLists.txt  avdict.h
avdict/src/: avdict.c
cmake/: FindAVCODEC.cmake  FindAVFORMAT.cmake  FindAVUTIL.cmake  FindLIBZIP.cmake  FindSWSCALE.cmake  GetLinkLibraries.cmake
doc/: pd_file_spec.md
doc/api/: README.md  README.zh_CN.md  auth.md  auth.zh_CN.md  result.json  result.zh_CN.json  version.example.json  version.json  version.md  version.zh_CN.json  version.zh_CN.md
doc/api/auth/: pubkey.example.json  pubkey.json  pubkey.zh_CN.json  status.example.json  status.json  status.zh_CN.json
doc/api/auth/user/: add.example.json  add.json  add.zh_CN.json  user.json  user.zh_CN.json
doc/db/: authors.md  files.md  pixiv_artwork_tags.md  pixiv_artworks.md  pixiv_files.md  tags.md  tags_i18n.md  token.md  users.md
exif/: CMakeLists.txt  exif.h
exif/cmake/: FindExiv2.cmake
exif/patchs/: basicio.cpp.patch
exif/src/: exif.cpp  exif_priv.h
proc_macros/: Cargo.toml  proc_macros.rs
scripts/: README.md  build_exiv2.sh  build_ffmpeg.sh  build_fmt.sh  build_libzip.sh  build_rapidjson.sh  build_win_exiv2.bat  build_win_expat.bat  build_win_ffmpeg.sh  build_win_fmt.bat  build_win_libzip.bat  build_win_openssl.bat  build_win_rapidjson.bat  build_win_x264.sh  build_win_zlib.bat  build_x264.sh  download_certs.bat  gen_mo.py  get_cache_key.py  update_language.sh
src/: _avdict.rs  _exif.rs  _ugoira.rs  author_name_filter.rs  avdict.rs  cookies.rs  download.rs  dur.rs  error.rs  exif.rs  fanbox_api.rs  formdata.rs  i18n.rs  list.rs  log_cfg.rs  main.rs  opthelper.rs  opts.rs  pixiv.rs  pixiv_app.rs  pixiv_link.rs  pixiv_web.rs  proc_macros.rs  retry_interval.rs  settings.rs  settings_list.rs  task_manager.rs  ugoira.rs  utils.rs  webclient.rs
src/data/: data.rs  exif.rs  exif_data_source.json  fanbox.rs  json.rs  mod.rs  video.rs
src/db/: config.rs  mod.rs  pixiv_artworks.rs  push_task.rs  token.rs  traits.rs  user.rs
src/db/sqlite/: db.rs  error.rs  mod.rs
src/downloader/: downloader.rs  enums.rs  error.rs  helper.rs  local_file.rs  mod.rs  tasks.rs
src/downloader/pd_file/: enums.rs  error.rs  file.rs  mod.rs  part_status.rs  version.rs
src/ext/: any.rs  atomic.rs  cstr.rs  flagset.rs  io.rs  json.rs  mod.rs  rawhandle.rs  replace.rs  rw_lock.rs  subprocess.rs  try_err.rs  use_or_not.rs
src/fanbox/: check.rs  comment.rs  comment_list.rs  creator.rs  error.rs  item.rs  item_list.rs  mod.rs  paginated_creator_posts.rs  plan.rs  post.rs
src/fanbox/article/: block.rs  body.rs  file.rs  image.rs  mod.rs  url_embed.rs
src/opt/: author_name_filter.rs  crf.rs  header_map.rs  mod.rs  proxy.rs  size.rs  use_progress_bar.rs
src/parser/: description.rs  json.rs  mainpage.rs  metadata.rs  mod.rs
src/pixivapp/: check.rs  error.rs  illust.rs  illusts.rs  image_urls.rs  mod.rs  tag.rs
src/push/: every_push.rs  mod.rs  pushdeer.rs
src/push/telegram/: botapi_client.rs  image.rs  mod.rs  text.rs  tg_type.rs
src/server/: context.rs  cors.rs  mod.rs  params.rs  preclude.rs  result.rs  route.rs  service.rs  timer.rs  traits.rs  version.rs
src/server/auth/: mod.rs  pubkey.rs  status.rs  token.rs  user.rs
src/server/body/: hyper.rs  mod.rs  response.rs
src/server/proxy/: mod.rs  pixiv.rs
src/server/push/: index.rs  mod.rs
src/server/push/task/: mod.rs  pixiv_bookmarks.rs  pixiv_follow.rs  pixiv_illusts.rs  pixiv_send_message.rs
src/server/unittest/: auth.rs  mod.rs  version.rs
src/tmp_cache/: mod.rs
testdata/: 74841737_frames.json  README.md
ugoira/: CMakeLists.txt  ugoira.h  ugoira_config.h.in
ugoira/src/: main.cpp  ugoira.c
