[package]
name = "pixiv_downloader"
version = "0.0.1"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
atty = "0.2"
c_fixed_string = { version = "0.2", optional = true }
chrono = "0.4"
dateparser = "0.1.6"
derive_more = "0.99"
flagset = { version = "0.4", optional = true }
futures-util = "0.3"
getopts = "0.2"
gettext = "0.4"
html_parser = "0.6.3"
indicatif = "0.17.0-rc.11"
int-enum = "0.4"
json = "0.12"
lazy_static = "1.4"
modular-bitfield = "0.11"
proc_macros = { path = "proc_macros" }
regex = "1"
reqwest = { version = "0.11", features = ["brotli", "deflate", "gzip", "rustls-tls", "socks", "stream"] }
RustyXML = "0.3"
spin_on = "0.1.1"
tokio = { version = "1.18", features = ["rt", "macros", "rt-multi-thread", "time"] }
url = "2.2"
urlparse = "0.7"
utf16string = { version= "0.2", optional = true }

[build-dependencies]
bindgen = { version = "0.60", optional = true }
cmake = { version = "0.1", optional = true }

[features]
all = ["exif", "ugoira"]
avdict = ["bindgen", "cmake", "flagset"]
exif = ["bindgen", "c_fixed_string", "cmake", "link-cplusplus", "utf16string"]
ugoira = ["avdict", "bindgen", "cmake", "link-cplusplus"]

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3.9", features = ["winnls", "stringapiset"] }

[target.'cfg(target_env = "gnu")'.dependencies]
link-cplusplus = { version = "1.0", features = ["libstdc++"], optional = true }
