[package]
name = "pixiv_downloader"
version = "0.0.1"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = { version = "0.1", optional = true }
atty = "0.2"
c_fixed_string = { version = "0.2", optional = true }
cfg-if = "1"
chrono = "0.4"
dateparser = "0.1.7"
derive_more = "0.99"
fancy-regex = "0.10"
flagset = { version = "0.4", optional = true }
futures-util = "0.3"
getopts = "0.2"
gettext = "0.4"
html_parser = "0.6.3"
http = "0.2"
http-content-range = "0.1"
hyper = { version="0.14", features = ["server"], optional = true }
indicatif = "0.17.0"
int-enum = "0.4"
itertools = "0.10"
json = "0.12"
lazy_static = "1.4"
modular-bitfield = "0.11"
parse-size = "1"
proc_macros = { path = "proc_macros" }
regex = "1"
reqwest = { version = "0.11", features = ["brotli", "deflate", "gzip", "rustls-tls", "socks", "stream"] }
rusqlite = { version = "0.28", features = ["bundled", "chrono"], optional = true }
RustyXML = "0.3"
tokio = { version = "1.20", features = ["rt", "macros", "rt-multi-thread", "time"] }
url = "2.2"
urlparse = "0.7"
utf16string = { version= "0.2", optional = true }

[build-dependencies]
bindgen = { version = "0.60", optional = true }
cmake = { version = "0.1", optional = true }

[features]
all = ["db", "db_sqlite", "exif", "ugoira", "server"]
avdict = ["bindgen", "cmake", "flagset"]
db = []
db_sqlite = ["rusqlite"]
exif = ["bindgen", "c_fixed_string", "cmake", "link-cplusplus", "utf16string"]
server = ["async-trait", "db", "hyper"]
ugoira = ["avdict", "bindgen", "cmake", "link-cplusplus"]

[profile.release-with-debug]
inherits = "release"
debug = true

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3.9", features = ["winnls", "stringapiset"] }

[target.'cfg(windows)'.build-dependencies]
parse-size = "1"

[target.'cfg(target_env = "gnu")'.dependencies]
link-cplusplus = { version = "1.0", features = ["libstdc++"], optional = true }
