[package]
name = "proc_macros"
version = "0.0.1"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "proc_macros"
path = "proc_macros.rs"
proc-macro = true

[dependencies]
convert_case = "0.5"
json = "0"
parse_duration = "2"
proc-macro2 = "1"
quote = "1"
syn = { version = "2", features = ["full"] }
